--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/preact": "^3.0.1",
     "@astrojs/sitemap": "^3.0.3",
     "@astrojs/tailwind": "^5.0.3",
+    "@astrojs/vercel": "^6.1.4",
     "astro": "^4.0.3",
     "install": "^0.13.0",
     "npm": "^10.2.5",
